[gd_scene load_steps=19 format=3 uid="uid://dl0s61aivh26i"]

[ext_resource type="Texture2D" uid="uid://djewyxtnnkypm" path="res://icon.svg" id="1_hwqma"]
[ext_resource type="Script" path="res://level.gd" id="1_r3wfe"]
[ext_resource type="Script" path="res://character.gd" id="2_fv8sc"]
[ext_resource type="PackedScene" uid="uid://cer07bbkykuln" path="res://gui.tscn" id="5_lyee8"]
[ext_resource type="Texture2D" uid="uid://dbns6qnb1jpjs" path="res://dog.png" id="6_cd4xn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyab5"]
size = Vector2(78, 70.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jqus"]
size = Vector2(50.9804, 49.1379)

[sub_resource type="Animation" id="Animation_eisgo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.490196, -1.52588e-05)]
}

[sub_resource type="Animation" id="Animation_c84ix"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.490196, -1.52588e-05), Vector2(0.490196, -102.586)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_elbhw"]
_data = {
"RESET": SubResource("Animation_eisgo"),
"jump": SubResource("Animation_c84ix")
}

[sub_resource type="Animation" id="Animation_1gqlm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(185, 576)]
}

[sub_resource type="Animation" id="Animation_v51j6"]
resource_name = "creep"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.9, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(185, 576), Vector2(185, 381)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fblq1"]
_data = {
"RESET": SubResource("Animation_1gqlm"),
"creep": SubResource("Animation_v51j6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kl8fd"]
size = Vector2(156, 211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l36wn"]
size = Vector2(82, 76)

[sub_resource type="Animation" id="Animation_oakxe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(182, 334)]
}

[sub_resource type="Animation" id="Animation_pc83w"]
resource_name = "throw_treat"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(182, 334), Vector2(182, 611), Vector2(182, 611)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ckc0h"]
_data = {
"RESET": SubResource("Animation_oakxe"),
"throw_treat": SubResource("Animation_pc83w")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_r3wfe")
time_limit = 10.0
last_step = 10

[node name="GUI" parent="." instance=ExtResource("5_lyee8")]

[node name="Prizes" type="Node2D" parent="."]

[node name="Prize" type="Node2D" parent="Prizes"]
position = Vector2(322, -282)

[node name="Area2D" type="Area2D" parent="Prizes/Prize"]

[node name="Sprite2D" type="Sprite2D" parent="Prizes/Prize/Area2D"]
modulate = Color(0.0313726, 1, 0, 1)
position = Vector2(-20, -20)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("1_hwqma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Prizes/Prize/Area2D"]
position = Vector2(-20, -22)
shape = SubResource("RectangleShape2D_fyab5")

[node name="Prize2" type="Node2D" parent="Prizes"]
position = Vector2(92, -1785)

[node name="Area2D" type="Area2D" parent="Prizes/Prize2"]

[node name="Sprite2D" type="Sprite2D" parent="Prizes/Prize2/Area2D"]
modulate = Color(0.0313726, 1, 0, 1)
position = Vector2(-20, -20)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("1_hwqma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Prizes/Prize2/Area2D"]
position = Vector2(-20, -22)
shape = SubResource("RectangleShape2D_fyab5")

[node name="Jumps" type="Node2D" parent="."]

[node name="Jump" type="Node2D" parent="Jumps"]
position = Vector2(87, -1363)

[node name="Area2D" type="Area2D" parent="Jumps/Jump"]

[node name="Sprite2D" type="Sprite2D" parent="Jumps/Jump/Area2D"]
modulate = Color(0.972549, 0.105882, 1, 1)
position = Vector2(-20, -20)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("1_hwqma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumps/Jump/Area2D"]
position = Vector2(-20, -22)
shape = SubResource("RectangleShape2D_fyab5")

[node name="Obstacles" type="Node2D" parent="."]

[node name="CharacterBody2D" type="Node2D" parent="."]
position = Vector2(137, 284)
scale = Vector2(2.04, 2.32)
script = ExtResource("2_fv8sc")

[node name="Area2D" type="Area2D" parent="CharacterBody2D"]
position = Vector2(0.490196, -1.52588e-05)

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D/Area2D"]
position = Vector2(19.5, 19.5)
scale = Vector2(0.460937, 0.460937)
texture = ExtResource("1_hwqma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Area2D"]
position = Vector2(19.6078, 18.9655)
shape = SubResource("RectangleShape2D_0jqus")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_elbhw")
}

[node name="GameOver" type="Label" parent="."]
offset_left = 136.0
offset_top = 303.0
offset_right = 250.0
offset_bottom = 340.0
text = "GAME OVER"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimerText" type="Label" parent="."]
offset_left = 300.0
offset_top = 28.0
offset_right = 332.0
offset_bottom = 54.0
text = "0:00"

[node name="Dog" type="Node2D" parent="."]
position = Vector2(185, 576)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dog"]
libraries = {
"": SubResource("AnimationLibrary_fblq1")
}

[node name="Area2D" type="Area2D" parent="Dog"]
collision_mask = 32769

[node name="Sprite2D" type="Sprite2D" parent="Dog/Area2D"]
position = Vector2(-1.99998, 74)
texture = ExtResource("6_cd4xn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dog/Area2D"]
position = Vector2(-1, 70)
shape = SubResource("RectangleShape2D_kl8fd")

[node name="Timer" type="Timer" parent="Dog"]
wait_time = 2.0

[node name="Treat" type="Node2D" parent="."]
position = Vector2(182, 334)

[node name="Area2D" type="Area2D" parent="Treat"]
position = Vector2(0, -6)
collision_layer = 32768

[node name="Sprite2D" type="Sprite2D" parent="Treat/Area2D"]
modulate = Color(0.0313726, 1, 0, 1)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_hwqma")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Treat/Area2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_l36wn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Treat"]
libraries = {
"": SubResource("AnimationLibrary_ckc0h")
}

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="CharacterBody2D/Area2D" to="CharacterBody2D" method="_on_area_2d_body_entered"]
[connection signal="area_entered" from="Dog/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Dog/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Treat/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
